fix: footer spacing

--- a/app/shared/components/Nav/Footer/footer.module.css
+++ b/app/shared/components/Nav/Footer/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   color: var(--white);
-  background-color: var(--primary-color);
+  background-color: var(--primary-dark);
   padding-top: 4em;
   text-align: center;
 }
@@ -11,10 +11,10 @@
 
 .subfooter {
   display: flex;
-  background-color: var(--primary-dark);
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  border-top: 1px solid white
 }
 
 .subfooter div {
@@ -34,5 +34,11 @@
 @media (max-width: 992px) {
   .disclaimer, .acknowledgements {
     text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .subfooter {
+    padding-bottom: 4em;
   }
 }
